--- a/templates/place.html
+++ b/templates/place.html
@@ -38,12 +38,12 @@
     <!-- adding photos and reviews to the page -->
     <!-- grid layout is used to align the images and text -->
     <div style="display: grid; grid-template-columns: 28vw auto; width: 70vw; background-color: transparent; margin-top: 5vw;">
-        <div style="width: 25vw; height: 20vw; overflow: hidden; border-radius: 5px; border: 2px solid #777;"><img style="width: 25vw; height: 20vw;"src="static/images/{{images[catalogue[0][0]][2]}}.png"></div>
+        <div style="width: 25vw; height: 20vw; overflow: hidden; border-radius: 5px; border: 2px solid #777;"><img style="width: 25vw; height: 20vw;"src="static/images/{{images[catalogue[0][0]][2]}}.png" alt="Review image 1"></div>
         <div style="display: flex;height: 20vw; width: 40vw;background-color: transparent; align-items: center; font-size: 1vw;">"{{reviews[0][1]}}"</div>
     </div>
     <div style="display: grid; grid-template-columns: auto 28vw; width: 70vw; background-color: transparent; margin-top: 10vw;">
         <div style="display: flex;height: 20vw; width: 40vw;background-color: transparent; align-items: center; font-size: 1vw; padding-bottom: 5vw;">"{{reviews[0][2]}}"</div>
-        <div style="width: 25vw; height: 20vw; overflow: hidden; border-radius: 5px; border: 2px solid #777;"><img style="width: 25vw; height: 20vw;"src="static/images/{{images[catalogue[0][0]][3]}}.png"></div>
+        <div style="width: 25vw; height: 20vw; overflow: hidden; border-radius: 5px; border: 2px solid #777;"><img style="width: 25vw; height: 20vw;"src="static/images/{{images[catalogue[0][0]][3]}}.png" alt="Review image 2"></div>
     </div>
     <div id="map"></div> <!-- integrating the interactive map -->
 </div>
