--- a/templates/menu.html
+++ b/templates/menu.html
@@ -14,14 +14,13 @@
 </ul>
 <div class="colormode" onclick="changecolor()"><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"><i class="material-icons" style="font-size: 2vw; text-align: center; vertical-align: middle;">contrast</i></div>
 <script>
+    // Changing the background color and text color of the "body" element, hence changing all of it's child elements
     function changecolor() {
         if (document.body.style.backgroundColor=="black") {
-            console.log('jdahidsjablack')
             document.body.style.backgroundColor="white";
             document.body.style.color="black";
         }
         else {
-            console.log('jdahidsja')
             document.body.style.backgroundColor="black";
             document.body.style.color="white";
         }
